--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -18,7 +18,7 @@ jobs:
       uses: actions/checkout@v4.2.2
 
     - name: Set up Node js
-      uses: actions/setup-node@4
+      uses: actions/setup-node@v4.4.0
       with:
         node-version: '20'
 
